# FTHD

./: .gitignore  README.md  pyproject.toml
fthd/cfgs/: fthd.yaml  fthd_iac.yaml  fthd_iac_ekf.yaml  fthd_racecar51.yaml
fthd/data/Denoised_racecar_DATA/: denoised_csv.npz  denoised_csv_10RNN_val.npz  denoised_csv_11RNN_val.npz  denoised_csv_12RNN_val.npz  denoised_csv_13RNN_val.npz  denoised_csv_14RNN_val.npz  denoised_csv_15RNN_val.npz  denoised_csv_16RNN_val.npz  denoised_csv_17RNN_val.npz  denoised_csv_18RNN_val.npz  denoised_csv_19RNN_val.npz  denoised_csv_1RNN_val.npz  denoised_csv_20RNN_val.npz  denoised_csv_2RNN_val.npz  denoised_csv_3RNN_val.npz  denoised_csv_4RNN_val.npz  denoised_csv_5RNN_val.npz  denoised_csv_6RNN_val.npz  denoised_csv_7RNN_val.npz  denoised_csv_8RNN_val.npz  denoised_csv_9RNN_val.npz
fthd/data/racecar51/: racecar51_10RNN_val.npz  racecar51_11RNN_val.npz  racecar51_12RNN_val.npz  racecar51_13RNN_val.npz  racecar51_14RNN_val.npz  racecar51_15RNN_val.npz  racecar51_16RNN_val.npz  racecar51_17RNN_val.npz  (+12 more)
fthd/hyper_train/: train_fthd_EKF_IAC_hyperparameters.py  train_fthd_EKF_racecar_hyperparameters.py  train_fthd_ETHZ_hyperparameters.py  train_fthd_IAC_hyperparameters.py  train_fthd_racecar_hyperparameters.py
fthd/model/: models_supervised.py  models_supervised_51.py  models_supervised_ekf.py  models_supervised_ekf_51.py
fthd/tools/: csv_denoise_plot.py  csv_denoised_parser_timeverify.py  csv_fthd_timeverify.py  csv_racecar51_data_process.py
fthd/train/: fthd_ekf.py  fthd_ekf_51.py  fthd_train.py  fthd_train_racecar51.py
(+7 files in other folders)
