[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fthd"
authors = [
    {name = "Shiming Fang", email = "sfang10@binghamton.edu"},
]
description = "Fine Tuning Hybrid Dynamics"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "TODO"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "torch",
    "wandb",
    "ray[tune]",
    "scikit-learn",
    "tqdm",
    "argcomplete"
]
dynamic = ["version"]
